src/objects/Factor__c.object
<CustomObject>
    <description>Custom object for RIMS Risk Maturity Model Assessment Factors</description>
    <fields>
        <fullName>Attribute__c</fullName>
        <label>Attribute</label>
        <picklist>
            <picklistValues>
                <fullName>Adoption of ERM-based Approach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERM Process Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resiliency and Sustainability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Appetite Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Root Cause Discipline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncovering Risks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coverage_Level__c</fullName>
        <formula>If(Coverage__c &lt;5.0,&quot;Somewhat Uncertain&quot;,&quot;Partially Uncertain&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coverage Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage__c</fullName>
        <label>Coverage</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effectiveness_Level__c</fullName>
        <formula>If(Effectiveness__c &lt;4.0,&quot;Managed&quot;,IF(Effectiveness__c &lt;5.0,&quot;Somewhat Managed&quot;,&quot;Partially Managed&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effectiveness Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effectiveness__c</fullName>
        <label>Effectiveness</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <formula>Effectiveness__c * Proactivity__c * Coverage__c</formula>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <label>Indicator</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legend__c</fullName>
        <label>Legend</label>
        <picklist>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeatable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Hoc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <formula>( 1- Index__c /1000 ) * 5</formula>
        <label>Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maturity_Level__c</fullName>
        <formula>If(Maturity_Score__c&lt;600.0,&quot;Repeatable&quot;,&quot;Initial&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maturity Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_Score__c</fullName>
        <label>Maturity Score</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proactivity_Level__c</fullName>
        <formula>If(Proactivity__c &lt;4.0,&quot;Proactive&quot;,IF(Proactivity__c&lt;5.0,&quot;Somewhat Proactive&quot;,&quot;Partially Proactive&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proactivity Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proactivity__c</fullName>
        <label>Proactivity</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>RMM Factor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Attribute__c</columns>
        <columns>Effectiveness__c</columns>
        <columns>Proactivity__c</columns>
        <columns>Coverage__c</columns>
        <columns>Index__c</columns>
        <columns>Level__c</columns>
        <columns>Legend__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RMM Factor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMM Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>